Added my Favorites

--- a/favorites.html
+++ b/favorites.html
@@ -4,29 +4,26 @@
     <title>table</title>
   </head>
   <body>
-    <table>
-      <tr>
-        <th>
-          First Name
-        </th>
-        <th>
-          Last Name
-        </th>
-        <th>
-          Favorite Animal
-        </th>
-      </tr>
-      <tr>
-        <td>
-          Ricky
-        </td>
-        <td>
-          Padilla
-        </td>
-        <td>
-          Elk
-        </td>
-      </tr>
-    </table>
+    <table border="5"    width="50%"   cellpadding="4" cellspacing="3">
+   <tr>
+      <th colspan="3"><br><h3>Class Favorites</h3>
+      </th>
+   </tr>
+   <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Favorite Animal</th>
+   </tr>
+   <tr align="center">
+      <td>Ricky</td>
+      <td>Padilla</td>
+      <td>Elk</td>
+    </tr>
+  <tr align="center">
+      <td>Michael</td>
+      <td>Olson</td>
+      <td>Grouper</td>
+  </tr>
+</table>
   </body>
 </html>
